# OpenSubtitles-Uploader-PRO

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  README.md  clear-ffmpeg-cache.js  deploy.sh  eslint.config.js  jsconfig.json  latest-v1.5.41-fixed.json  latest.json  package-lock.json  package.json  test-mkv-extraction.html  tsconfig.json  vite.config.js
.github/workflows/: build-desktop-apps.yml  generate-changelog.yml  update-changelog.yml
docs/: CLAUDE.md  README.md
scripts/: README.md  embed-api-keys.js  generate-changelog.js  generate-changelog.sh
scripts/utils/: quick-cache-fix.js
src/: App.jsx  main.jsx  preload.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon-old.icns  icon.icns
src-tauri/src/: main.rs
src/components/: AdBlockTestPage.jsx  AdBlockerWarning.jsx  ApiHealthCheck.jsx  ChangelogOverlay.jsx  ConfigOverlay.jsx  DebugPanel.jsx  DropZone.jsx  HelpOverlay.jsx  LanguageFilter.jsx  LoginDialog.jsx  MatchedPairs.jsx  MetadataTags.jsx  MkvTest.jsx  MovieDisplay.jsx  MovieSearch.jsx  OfflineIndicator.jsx  OrphanedSubtitles.jsx  ProgressOverlay.jsx  RankRestrictionWarning.jsx  StatsPanel.jsx  SubtitlePreview.jsx  SubtitleUploadOptions.jsx  SubtitleUploader.jsx  SystemInfo.jsx  TestModePanel.jsx  UpdateNotification.jsx  UpdateSettings.jsx  UploadButton.jsx  UserProfile.jsx  VideoMetadataDisplay.jsx
src/contexts/: AuthContext.jsx  ThemeContext.jsx
src/data/: changelog.json
src/hooks/: useAppUpdate.js  useCheckSubHash.js  useDebugMode.js  useFileHandling.js  useGuessIt.js  useLanguageData.js  (+8 more)
tests/: README.md
(+47 files in other folders)
