[package]
name = "opensubtitles-uploader-pro"
version = "1.1.21"
description = "OpenSubtitles Uploader PRO - Professional subtitle uploader"
authors = ["OpenSubtitles"]
license = "MIT"
repository = "https://github.com/opensubtitles/opensubtitles-uploader-pro"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "api-all", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
